--- a/TODO App/index.html
+++ b/TODO App/index.html
@@ -1,11 +1,31 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>TODO App</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="todo">
+        <h2>ToDo List <img src="To-Do-Img/images/icon.png" alt="" /></h2>
+        <div class="row">
+          <input
+            type="text"
+            name=""
+            id="input"
+            placeholder="Add a new task..."
+          />
+          <button>Add</button>
+        </div>
+        <!-- <ul id="list">
+            <li class="checked">Task 1</li>
+            <li>Task 2</li>
+            <li>Task 3</li> -->
+        <!-- </ul> -->
+      </div>
+    </div>
+    <script src="script.js"></script>
+  </body>
 </html>
